# Algorithms-2019Spring-Final-Project

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
custom-testcases/: 1_basic_merge.in  2_basic_m_c.in  3_simple_SO.in  4_polygon.in  5_int64tesrt.in  6_rand_open_m1.in  8_OpenCase_1_SO.in.no-verify  OpenCase_4.in.no-verify  easy.in.1  myOpenCase_4.in  sample.in.1  sample.in.3  sample.in.4  sample.in.8  test-tiny.in
src/: CMakeLists.txt  Design.cpp  Design.h  Operation.cpp  Operation.h  main.cpp  parser.cpp  parser.h
src/bLib/: bLibPtr.h  bLibShape.h
src/splitLib/: BipGraph.cpp  BipGraph.h  MyGraph.cpp  MyGraph.h  splitter.cpp  splitter.h  sweep_plane.h
test-scripts/: custom_test.sh  random_test.sh
tests/: CMakeLists.txt
tests/splitLib_tests/: CMakeLists.txt  splitLibTest.cpp
visualize/: README.md  canvas.py  draw.py  draw_tk.py  dropout.py  errorcase.in.1  errorcase.in.10  errorcase.in.11  errorcase.in.12  errorcase.in.13  errorcase.in.14  errorcase.in.15  errorcase.in.16  errorcase.in.2  errorcase.in.3  errorcase.in.4  errorcase.in.5  errorcase.in.6  errorcase.in.7  errorcase.in.8  errorcase.in.9  errorcase.out.1  errorcase.out.10  errorcase.out.11  errorcase.out.12  errorcase.out.13  errorcase.out.14  errorcase.out.15  errorcase.out.16  errorcase.out.5  errorcase.out.6  errorcase.out.7  errorcase.out.8  errorcase.out.9  out.in  out.out  random_case.py  run_test.sh  verify.py
